tests/errors/literals/literal-wrong-return-annotation.fn
---
Description: Literal declared with a return type annotation other than the owning type
Expected: FN3103
---

type BadLiteral
{
    init{}

    literal wrongtype(value: i32) -> i32
    {
        return BadLiteral{}
    }
}

type Program
{
    static fn Main -> i32
    {
        return 0
    }
}
